[project]
name = "esobuild"
version = "0.1.0"
description = "Randomized subclass ideas for Elder Scrolls Online"
authors = [{ name = "Danny Stewart", email = "danny@stewart.cc" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["rich (>=14.0.0,<15.0.0)"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
mypy = "^1.16.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
esobuild = "esobuild.esobuild:main"
